Revert "Temporarily lock SFML revision used in CI"
This reverts commit 36a6e7c5a617b3f6cdb6bac9a9613e516ea6ba6e.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: SFML/SFML
-        ref: 8096ba24fccb6b76a7d9e8cc71a3afb7b02e517c
+        ref: master
         path: SFML
 
     - name: Configure SFML CMake
