--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -48,7 +48,7 @@ add_custom_target(doc ALL
 install(DIRECTORY ${DOXYGEN_OUTPUT_DIR}/html
         DESTINATION ${INSTALL_MISC_DIR}/doc
         COMPONENT doc)
-if(DOXYGEN_HHC_PROGRAM)
+if(DOXYGEN_GENERATE_HTMLHELP)
     install(FILES ${DOXYGEN_OUTPUT_DIR}/CSFML.chm
             DESTINATION ${INSTALL_MISC_DIR}/doc
             COMPONENT doc)
