--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,26 @@ if(SFML_OS_WINDOWS)
     endif()
 endif()
 
+# find SFML libraries (C++)
+if(CSFML_LINK_SFML_STATICALLY)
+    set(SFML_STATIC_LIBRARIES TRUE)
+    add_definitions(-DSFML_STATIC)
+endif()
+set(SFML_MODULES "System")
+if(CSFML_BUILD_AUDIO)
+    list(PREPEND SFML_MODULES "Audio")
+endif()
+if(CSFML_BUILD_GRAPHICS)
+    list(PREPEND SFML_MODULES "Graphics")
+endif()
+if(CSFML_BUILD_WINDOW)
+    list(PREPEND SFML_MODULES "Window")
+endif()
+if(CSFML_BUILD_NETWORK)
+    list(PREPEND SFML_MODULES "Network")
+endif()
+find_package(SFML 3.0.0 COMPONENTS ${SFML_MODULES} REQUIRED)
+
 # add the subdirectories
 add_subdirectory(src/CSFML)
 if(CSFML_BUILD_DOC)
