Add tests for `sfHttp`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,6 +41,7 @@ catch_discover_tests(test-csfml-window)
 
 add_executable(test-csfml-network
     Network/Ftp.test.cpp
+    Network/Http.test.cpp
     Network/IpAddress.test.cpp
     Network/SocketStatus.test.cpp
 )
