Add more tests for the Window module

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,8 +34,12 @@ catch_discover_tests(test-csfml-system)
 
 add_executable(test-csfml-window
     Window/Joystick.test.cpp
+    Window/Keyboard.test.cpp
+    Window/Mouse.test.cpp
+    Window/Sensor.test.cpp
+    Window/WindowBase.test.cpp
 )
-target_link_libraries(test-csfml-window PRIVATE csfml-window Catch2::Catch2WithMain)
+target_link_libraries(test-csfml-window PRIVATE csfml-window Catch2::Catch2WithMain SFML::Window)
 set_target_warnings(test-csfml-window)
 catch_discover_tests(test-csfml-window)
 
