Add tests for `sfContextAttribute`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(test-csfml-window
     Window/Keyboard.test.cpp
     Window/Mouse.test.cpp
     Window/Sensor.test.cpp
+    Window/Window.test.cpp
     Window/WindowBase.test.cpp
 )
 target_link_libraries(test-csfml-window PRIVATE csfml-window Catch2::Catch2WithMain SFML::Window)
