--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ concurrency:
   group: environment-${{github.ref}}
   cancel-in-progress: true
 
+env:
+  SFML_VERSION: 3.0.0
+
 defaults:
   run:
     shell: bash
@@ -49,7 +52,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: SFML/SFML
-        ref: master
+        ref: ${{env.SFML_VERSION}}
         path: SFML
 
     - name: Configure SFML CMake
@@ -104,7 +107,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: SFML/SFML
-        ref: 3.0.0
+        ref: ${{env.SFML_VERSION}}
         path: SFML
 
     - name: Configure SFML CMake
@@ -138,7 +141,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: SFML/SFML
-        ref: master
+        ref: ${{env.SFML_VERSION}}
         path: SFML
 
     - name: Configure SFML
