Add tests for `sfBlendMode`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,9 +45,10 @@ set_target_warnings(test-csfml-window)
 catch_discover_tests(test-csfml-window)
 
 add_executable(test-csfml-graphics
+    Graphics/BlendMode.test.cpp
     Graphics/Rect.test.cpp
 )
-target_link_libraries(test-csfml-graphics PRIVATE csfml-graphics Catch2::Catch2WithMain)
+target_link_libraries(test-csfml-graphics PRIVATE csfml-graphics Catch2::Catch2WithMain SFML::Graphics)
 set_target_warnings(test-csfml-graphics)
 catch_discover_tests(test-csfml-graphics)
 
