Add tests for `sfStencilMode`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(test-csfml-graphics
     Graphics/Color.test.cpp
     Graphics/CoordinateType.test.cpp
     Graphics/Rect.test.cpp
+    Graphics/StencilMode.test.cpp
 )
 target_link_libraries(test-csfml-graphics PRIVATE csfml-graphics Catch2::Catch2WithMain SFML::Graphics)
 set_target_warnings(test-csfml-graphics)
