Add tests for `sfVertexArray`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -52,6 +52,7 @@ add_executable(test-csfml-graphics
     Graphics/RenderStates.test.cpp
     Graphics/StencilMode.test.cpp
     Graphics/Transform.test.cpp
+    Graphics/VertexArray.test.cpp
 )
 target_link_libraries(test-csfml-graphics PRIVATE csfml-graphics Catch2::Catch2WithMain SFML::Graphics)
 set_target_warnings(test-csfml-graphics)
