--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,6 +53,7 @@ add_executable(test-csfml-graphics
     Graphics/StencilMode.test.cpp
     Graphics/Transform.test.cpp
     Graphics/VertexArray.test.cpp
+    Graphics/View.test.cpp
 )
 target_link_libraries(test-csfml-graphics PRIVATE csfml-graphics Catch2::Catch2WithMain SFML::Graphics)
 set_target_warnings(test-csfml-graphics)
